--- a/team.html
+++ b/team.html
@@ -34,7 +34,7 @@
 
           <div class="member">
             <!--  student 01 -->
-
+            <p>Brian Hobart</p>
           </div>
 
           <div class="member">
