--- a/team.html
+++ b/team.html
@@ -39,7 +39,7 @@
 
           <div class="member">
             <!--  student 02 -->
-
+            <p>Zackary Helman</p>
           </div>
 
           <div class="member">
