--- a/team.html
+++ b/team.html
@@ -44,7 +44,7 @@
 
           <div class="member">
             <!--  student 03 -->
-
+            <p>Roberto Gonzalez</p>
           </div>
 
           <div class="member">
