--- a/team.html
+++ b/team.html
@@ -54,7 +54,7 @@
 
           <div class="member">
             <!--  student 05 -->
-
+            <p>Ishaan</p>
           </div>
 
           <div class="member">
